# Pigeon

./: .gitignore  AGENTS.md  Cargo.toml  clippy.toml  opencode.json  rustfmt.toml
crates/pigeon/: Cargo.toml
crates/pigeon-codecs/: Cargo.toml
crates/pigeon-codecs/src/: lib.rs  var_int.rs  var_long.rs
crates/pigeon-commands/: Cargo.toml
crates/pigeon-commands/src/: lib.rs
crates/pigeon-config/: Cargo.toml
crates/pigeon-config/src/: lib.rs  schema.rs
crates/pigeon-core/: Cargo.toml
crates/pigeon-core/src/: lib.rs
crates/pigeon-core/src/server/: connection.rs  mod.rs
crates/pigeon-data/: Cargo.toml
crates/pigeon-data/src/: biomes.rs  blocks.rs  entities.rs  items.rs  lib.rs
crates/pigeon-inventory/: Cargo.toml
crates/pigeon-inventory/src/: lib.rs
crates/pigeon-macros/: Cargo.toml
crates/pigeon-macros/src/: lib.rs
crates/pigeon-math/: Cargo.toml
crates/pigeon-math/src/: aabb.rs  block_pos.rs  chunk_pos.rs  lib.rs  vector.rs
crates/pigeon-nbt/: Cargo.toml
crates/pigeon-nbt/src/: decode.rs  encode.rs  lib.rs  value.rs
crates/pigeon-plugin-api/: Cargo.toml
crates/pigeon-plugin-api/src/: lib.rs
crates/pigeon-protocol/: Cargo.toml
crates/pigeon-protocol/src/: lib.rs  ser.rs
crates/pigeon-protocol/src/codec/: compression.rs  encryption.rs  framed.rs  mod.rs
crates/pigeon-protocol/src/java/: login.rs  mod.rs  state.rs  status.rs
crates/pigeon-protocol/src/java/client/: mod.rs
crates/pigeon-protocol/src/java/server/: mod.rs
crates/pigeon-registry/: Cargo.toml
crates/pigeon-registry/src/: lib.rs
crates/pigeon-text/: Cargo.toml
crates/pigeon-text/src/: color.rs  component.rs  lib.rs
crates/pigeon-util/: Cargo.toml
crates/pigeon-util/src/: identifier.rs  lib.rs
crates/pigeon-world/: Cargo.toml
crates/pigeon-world/src/: lib.rs
crates/pigeon-world/src/anvil/: mod.rs  region.rs
crates/pigeon-world/src/chunk/: mod.rs
crates/pigeon/src/: main.rs
