[workspace]
resolver = "2"
members = [
    "crates/pigeon",
    "crates/pigeon-core",
    "crates/pigeon-config",
    "crates/pigeon-nbt",
    "crates/pigeon-codecs",
    "crates/pigeon-protocol",
    "crates/pigeon-world",
    "crates/pigeon-data",
    "crates/pigeon-registry",
    "crates/pigeon-inventory",
    "crates/pigeon-commands",
    "crates/pigeon-text",
    "crates/pigeon-math",
    "crates/pigeon-util",
    "crates/pigeon-plugin-api",
    "crates/pigeon-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["PigeonMC contributors"]
repository = "https://github.com/pigeonmc/pigeon"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
pigeon-core        = { path = "crates/pigeon-core" }
pigeon-config      = { path = "crates/pigeon-config" }
pigeon-nbt         = { path = "crates/pigeon-nbt" }
pigeon-codecs      = { path = "crates/pigeon-codecs" }
pigeon-protocol    = { path = "crates/pigeon-protocol" }
pigeon-world       = { path = "crates/pigeon-world" }
pigeon-data        = { path = "crates/pigeon-data" }
pigeon-registry    = { path = "crates/pigeon-registry" }
pigeon-inventory   = { path = "crates/pigeon-inventory" }
pigeon-commands    = { path = "crates/pigeon-commands" }
pigeon-text        = { path = "crates/pigeon-text" }
pigeon-math        = { path = "crates/pigeon-math" }
pigeon-util        = { path = "crates/pigeon-util" }
pigeon-plugin-api  = { path = "crates/pigeon-plugin-api" }
pigeon-macros      = { path = "crates/pigeon-macros" }

# Async / networking
tokio        = { version = "1.52", features = ["net", "rt-multi-thread", "io-util", "macros", "sync", "time", "fs", "signal"] }
tokio-util   = { version = "0.7", features = ["codec", "io"] }
bytes        = "1.12"
futures      = "0.3"
async-compression = { version = "0.4", features = ["tokio", "zlib"] }

# Compression
flate2       = { version = "1.1", features = ["rust_backend"] }

# Crypto
aes          = "0.9"
cfb8         = "0.9"
ctr          = "0.10"
rsa          = "0.10.0-rc.18"
sha1         = "0.11"
sha2         = "0.11"
hmac         = "0.13"
p384         = "0.14"
ecdsa        = "0.17"
rand         = "0.9"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "1.1"
uuid         = { version = "1.23", features = ["serde", "v3", "v4"] }
cesu8        = "1.1"
indexmap     = { version = "2.14", features = ["serde"] }

# Bit utilities
bitflags     = { version = "2.13", features = ["serde"] }
bitfield-struct = "0.8"
rustc-hash   = "2.1"

# Concurrency
rayon        = "1.12"
crossbeam    = "0.8"
dashmap      = "6.2"
parking_lot  = "0.12"
slotmap      = "1.1"
arc-swap     = "1.9"

# ECS
bevy_ecs     = { version = "0.14", features = ["multi-threaded"] }

# Math
glam         = { version = "0.29", features = ["serde"] }

# Logging / errors
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Macros
proc-macro2 = "1"
syn         = { version = "2", features = ["full", "extra-traits"] }
quote       = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
