[package]
name = "pigeon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pigeon-config     = { workspace = true }
pigeon-protocol    = { workspace = true }
pigeon-text        = { workspace = true }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
tracing           = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
bytes             = { workspace = true }
serde_json        = { workspace = true }
uuid              = { workspace = true }
