[package]
name = "pigeon-nbt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
bytes      = { workspace = true }
cesu8      = { workspace = true }
indexmap   = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
