[package]
name = "pigeon-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pigeon-codecs      = { workspace = true }
pigeon-nbt         = { workspace = true }
pigeon-util        = { workspace = true }
pigeon-text        = { workspace = true }
pigeon-macros      = { workspace = true }

bytes              = { workspace = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
futures            = { workspace = true }
flate2             = { workspace = true }

aes                = { workspace = true }
cfb8               = { workspace = true }
rsa                = { workspace = true }
sha1               = { workspace = true }
sha2               = { workspace = true }
hmac               = { workspace = true }
rand               = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
uuid               = { workspace = true }
cesu8              = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
