[package]
name = "pigeon-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pigeon-util     = { workspace = true }
pigeon-data     = { workspace = true }
indexmap        = { workspace = true }
thiserror       = { workspace = true }
parking_lot     = { workspace = true }
