[package]
name = "pigeon-world"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pigeon-nbt      = { workspace = true }
pigeon-math     = { workspace = true }
pigeon-util     = { workspace = true }
flate2          = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
bytes           = { workspace = true }
serde           = { workspace = true }
